# uvsr

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Launch UVSR Visibility Candidate.cmd  LaunchUVSR.cmd  README.md  readme.md
.github/workflows/: document-title-case.yml  readme-line-counts.yml
assets/fonts/geist/: LICENSE.txt
assets/luts/kodak/: NOTICE.md  README.md  UVSR_Kodak_2383_Print.cube  UVSR_Kodak_Ektar_100.cube  UVSR_Kodak_Portra_400.cube
assets/noise/: FAST-LICENSE.txt  README.md
assets/scenes/horizon_gi_benchmark/: HorizonGIBenchmark.glb  README.md
assets/scenes/intel_sponza/: README.md  intel_pbr_sponza.scene.json  intel_pbr_sponza_plain.scene.json
assets/scenes/intel_sponza/components/ivy/: import-report.json
docs/: agent-collaboration.md  ao-optimization-ledger.md  casual-agent-language.md  miniengine-taa-options.md  nra-rtaa-v1-postmortem.md  nra-rtaa.md  pbr-foundation.md  procedural-sky.md  screen-space-visibility.md  ui-integration-agent-procedure.md  visibility-dxil-evidence.md  visibility-estimator-benchmark.schema.json  visibility-estimator-validation.md  visibility-sample-rotation-v1.md  visibility-sample-rotation.md
docs/exec-plans/: README.md  TEMPLATE.md
docs/exec-plans/active/: ao-performance-optimization.md  bend-screen-space-shadows.md  miniengine-taa-options-experiment.md  sparse-virtual-shadow-maps.md  tonemapper-sunset-publication.md
docs/exec-plans/completed/: aa-ui-merged-experiment.md  ao-performance-optimization.md  imgui-reference-canon-contender.md  miniengine-taa-canon-contender.md  miniengine-taa-canonical-verification.md  miniengine-taa-options-experiment.md  pixel-zoom-and-benchmark-controls.md  sample-rotation-experiment.md  settings-compact-launch-animation-and-shadow.md  tonemapper-drawer-sunset.md  tonemapper-sunset-canonical-verification.md  tonemapper-sunset-publication.md  ui-integration-quality-repair.md  visibility-aa-ui-integration.md  visibility-sample-rotation-v1.md  zoom-fade-shadow-and-camera-controls.md  zoom-panel-proportion-and-level-transitions.md  zoom-scale-loading-punctuation-and-window-placement.md
docs/postmortem/: README.md  native-resolution-analytical-reconstructive-temporal-anti-aliasing-v1.md  nra-rtaa-v1.md  three-band-time-of-day-sky-v1-design.md  three-band-time-of-day-sky-v1.md  tonemapper-drawer-and-luts-v1.md  visibility-sample-rotation-v1.md  visibility-sample-rotation.md
docs/postmortem/archive/: tonemapper-drawer-v1.restore.json  tonemapper-drawer-v1.restore.patch
outputs/: sparse-virtual-shadow-maps-technical-report.md
overrides/: donut-app.patch  donut-engine.patch  imgui-dropdown-roll.patch  imgui-ui.patch
src/: agx_tonemapping_ps.hlsl  backdrop_blur_ps.hlsl  bend_screen_space_shadows.cpp  bend_screen_space_shadows.h  bend_screen_space_shadows_cb.h  bend_screen_space_shadows_cs.hlsl  bend_screen_space_shadows_debug_ps.hlsl  bend_screen_space_shadows_settings.h  bend_screen_space_shadows_shaders.cfg  camera_collision.cpp  camera_collision.h  camera_controllers.h  cmaa2.cpp  cmaa2.h  cmaa2.hlsl  directional_light_visibility.h  experiment_title.h  gpu_crash_diagnostics.cpp  gpu_crash_diagnostics.h  gpu_performance_monitor.cpp  gpu_performance_monitor.h  lighting_contribution.hlsli  lighting_contribution_shared.h  msaa_visibility_resolve.cpp  msaa_visibility_resolve.h  msaa_visibility_resolve_cs.hlsl  pbr.hlsli  pbr_deferred_lighting_cb.h  pbr_deferred_lighting_cs.hlsl  pbr_deferred_lighting_msaa_cs.hlsl  pbr_deferred_lighting_pass.cpp  pbr_deferred_lighting_pass.h  pbr_forward_ps.hlsl  pbr_gbuffer.hlsli  pbr_gbuffer_ps.hlsl  pbr_lighting.hlsli  pbr_material.h  pixel_zoom.h  pixel_zoom_ps.hlsl  procedural_sky_cb.h  (+107 more)
tests/: bend_screen_space_shadows_tests.cpp  camera_collision_tests.cpp  camera_controls_tests.cpp  experiment_title_tests.cpp  imgui_dropdown_roll_tests.cpp  pbr_reference_tests.cpp  pixel_zoom_tests.cpp  procedural_sky_reference_tests.cpp  production_shader_bundle_tests.cpp  radial_visibility_mask_tests.cpp  renderer_source_contract_tests.cpp  rtaa_reference_tests.cpp  scene_catalog_tests.cpp  scene_light_names_tests.cpp  sparse_virtual_shadow_map_tests.cpp  sponza_camera_preset_tests.cpp  taa_miniengine_tests.cpp  ui_animation_tests.cpp  ui_source_contract_tests.cpp  visibility_benchmark_statistics_tests.cpp  visibility_estimator_reference_tests.cpp  visibility_performance_plan_tests.cpp  visibility_projection_tests.cpp  visibility_sampling_reference_tests.cpp  world_material_view_tests.cpp
tools/: check_document_title_case.cmd  check_document_title_case.py  check_uvsr_thermal_state.ps1  generate_horizon_gi_benchmark.py  get_uvsr_performance_tools.ps1  import_sponza_ivy.mjs  launch_uvsr.ps1  measure_visibility_dxil.ps1  repair_bistro_orm.cmd  repair_bistro_orm.py  update_readme_line_counts.cmd  update_readme_line_counts.py
